# support-assistant-rag

./: .gitignore  README.md  pyproject.toml
evals/: harness.py  test_set.json
notebooks/: exploration.ipynb
src/: config.py  generate.py  ingest.py  pipeline.py  retrieve.py
tests/: test_evals.py  test_generate.py  test_ingest.py  test_retrieve.py
