[project]
name = "support-assistant-rag"
version = "0.1.0"
description = "RAG-based support assistant using LLMs"
authors = [
    {name = "PraveenKumarVk",email = "reachpraveenvk@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "torch (==2.2.2)",
    "sentence-transformers (==5.6.0)",
    "pinecone (>=9.1.0,<10.0.0)",
    "pypdf (>=6.14.2,<7.0.0)",
    "pytesseract (>=0.3.13,<0.4.0)",
    "pdf2image (>=1.17.0,<2.0.0)",
    "beautifulsoup4 (>=4.15.0,<5.0.0)",
    "rank-bm25 (>=0.2.2,<0.3.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
